# audial

./: .gitignore  CMakeLists.txt  audio.cpp  audio.h  audio_util.h  build.sh  clean.sh  cmd_line.txt  cmd_line_hangout.txt  game.cpp  makefile  makefile.old  portaudio_util.cpp  portaudio_util.h  shader.cpp  shader.h  synth.cpp  synth.h  todo.txt  util.h
art_src/: axes.blend  chunked_sphere.blend  ps_buttons.xcf  quad.blend  sphere.blend  triangle.blend
codegen/: codegen.py  enum_gen.py  properties_gen.py
codegen/enums/: audio_event_type.json  audio_synth_param_type.json  automation_type.json  collision_layer.json  color.json  direction.json  enemy_region_type.json  hit_response_type.json  mech_type.json  script_action_type.json  seq_action_type.json  step_seq_param_type.json  typing_enemy_type.json  waveform.json  waypoint_follower_mode.json
codegen/properties/: camera_control_seq_action.json  change_step_seq_max_voices_seq_action.json  change_step_sequencer_seq_action.json  note_on_off_seq_action.json  set_all_steps_seq_action.json  spawn_automator_seq_action.json  test.json  vfx_entity_props.json  vfx_pulse_seq_action.json
codegen/templates/: enum_cereal.h.jinja  enum_header.h.jinja  enum_source.cpp.jinja  properties_header.h.jinja  properties_source.cpp.jinja
data/: breeze.xml  breeze_rhythmic.xml  breeze_rhythmic_bass_first.xml  empty.xml  event_test.xml  feeling_level.xml  flow_action_seq.txt  flow_auto_phrase_level.xml  flow_level.xml  flow_obstacle_level.xml  flow_simple_level.xml  flow_slow_action_seq.txt  flow_slow_level.xml  flow_tech_level.xml  game_ptree_test.xml  lane_note_tables.txt  lanes_liquid_level.xml  liquid_song.xml  moving_bass.xml  moving_planet_test.xml  new_entities.xml  recorder_balloon_test.xml  rookie2_action_seq.txt  rookie3_action_seq.txt  rookie4_action_seq.txt  rookie4_level.xml  rookie_action_seq.txt  rookie_level.xml  script.xml  script2.xml  script3.xml  script4.xml  script5.xml  song1.xml  spawns.txt  spawns_tech.txt  spawns_test.txt  star_action_seq.txt  star_level.xml  synth_patches.xml  (+29 more)
data/barren/: action_seq.txt  level.xml  level_new_sec2.xml  level_positional_letters.xml  patches.xml  r7_action_seq.txt  r7_action_seq2.txt  r7_init_action_seq.txt  room0_action_seq.txt  room1_action_seq.txt  room5_action_seq.txt
data/barren_weird_bass/: patches.xml  room1_action_seq.txt
data/billevans/: level.xml  level2.xml  patches.xml  patches2.xml
data/brew/: level.xml  patches.xml
data/brew2/: level.xml  level_launch_base.xml  level_new_billevans.xml  level_openbillevans.xml  patches.xml  r0_action_seq.txt
data/bumpin/: level.xml  level2.xml  patches.xml
data/dict_en/: enable1.txt.out
data/flow_tech/: flow_tech_level.xml  room1_action_seq.txt  synth_patches_flow_tech.xml
data/hangout/: cmd_line_sec0.txt  cmd_line_sec1.txt  cmd_line_sec2.txt  cmd_line_sec3.txt  level1.xml  level1_1.xml  level1_1_2.xml  level1_1_3.xml  level1_2.xml  patches.xml
data/mech-test/: level.xml  patches.xml
data/mech1/: level.xml  patches.xml
data/mech2/: level.xml  patches.xml
data/mech3/: level.xml  levelb.xml  levelc.xml  patches_c.xml
data/models/: axes.blend  axes.blend1  axes.mtl  chunked_sphere.mtl  cross.blend
data/playground/: level.xml  patches.xml
data/prefabs/: bass_bb1.xml  bass_d1.xml  bass_f0.xml  bass_f1.xml  r0_bass_g.xml
data/sounds/: sources.txt
data/spawner_test/: level.xml  patches.xml
data/synthwave/: level.xml  patches.xml  room1_action_seq.txt
glad/src/: glad.cpp
shaders/: color.frag  line.frag  line.vert  msdf_text.frag  quad.frag  quad.vert  shader.frag  shader.vert  simple_depth_shader.vert  terrain.frag  terrain.vert  text.frag  text.vert  text3d.frag  text3d.vert  water.frag  water.vert  wireframe.frag  wireframe.geom  wireframe.vert
src/: OBJ_Loader.h  aabb.cpp  aabb.h  actions.cpp  actions.h  audio.cpp  audio.h  audio_event_imgui.cpp  audio_event_imgui.h  audio_loader.cpp  audio_loader.h  audio_platform.cpp  audio_platform.h  audio_serialize.h  audio_util.cpp  audio_util.h  beat_clock.cpp  beat_clock.h  beat_time_event.cpp  beat_time_event.h  bser_test.c  c_property_test.cpp  camera.h  camera_util.h  cereal_test.cpp  collisions.cpp  collisions.h  color.h  color_presets.h  component.cpp  component.h  constants.h  cube_verts.h  dict_test.cpp  ecs_test.cpp  editor.cpp  editor.h  editor_id.cpp  editor_id.h  entity.cpp  (+120 more)
src/components/: activator.cpp  activator.h  area_recorder.cpp  area_recorder.h  beep_on_hit.cpp  beep_on_hit.h  camera.cpp  camera.h  camera_controller.cpp  camera_controller.h  damage.cpp  damage.h  events_on_hit.cpp  events_on_hit.h  hit_counter.cpp  hit_counter.h  light.cpp  light.h  model_instance.cpp  model_instance.h  on_destroy_event.h  orbitable.cpp  orbitable.h  piano_planet.cpp  piano_planet.h  player_controller.cpp  player_controller.h  player_orbit_controller.cpp  player_orbit_controller.h  recorder_balloon.cpp  recorder_balloon.h  rigid_body.cpp  rigid_body.h  sequencer.h  transform.cpp  transform.h  velocity.h  waypoint_follow.cpp  waypoint_follow.h
src/entities/: action_sequencer.cpp  action_sequencer.h  beat_wall.cpp  beat_wall.h  camera.cpp  camera.h  enemy.cpp  enemy.h  enemy_spawner.cpp  enemy_spawner.h  flow_enemy.cpp  flow_enemy.h  flow_pickup.cpp  flow_pickup.h  flow_player.cpp  flow_player.h  flow_trigger.cpp  flow_trigger.h  flow_wall.cpp  flow_wall.h  grabber.cpp  grabber.h  hazard.cpp  hazard.h  int_variable.cpp  int_variable.h  lane_note_enemy.cpp  lane_note_enemy.h  lane_note_player.cpp  lane_note_player.h  light.cpp  light.h  mech.cpp  mech.h  param_automator.cpp  param_automator.h  particle_emitter.cpp  particle_emitter.h  player.cpp  player.h  (+22 more)
src/enums/: AutomationType.cpp  AutomationType.h  CollisionLayer.cpp  CollisionLayer.h  CollisionLayer_cereal.h  ColorPreset.cpp  ColorPreset.h  Direction.cpp  Direction.h  EnemyRegionType.cpp  EnemyRegionType.h  HitResponseType.cpp  HitResponseType.h  MechType.cpp  MechType.h  ScriptActionType.cpp  ScriptActionType.h  ScriptActionType_cereal.h  SeqActionType.cpp  SeqActionType.h  StepSeqParamType.cpp  (+13 more)
(+58 files in other folders)
